--- a/notebooks/Wavelet_Tutorial/WV1 - Using PyWavelets for Wavelet Analysis.ipynb
+++ b/notebooks/Wavelet_Tutorial/WV1 - Using PyWavelets for Wavelet Analysis.ipynb
@@ -903,7 +903,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.0 ('Tensor')",
+   "display_name": "Python 3.10.6 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -917,11 +917,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.10.6"
   },
   "vscode": {
    "interpreter": {
-    "hash": "8866a21cc5f21e91244415984b8411fc857d8c292882ebcd14b2f895066ec71f"
+    "hash": "949777d72b0d2535278d3dc13498b2535136f6dfe0678499012e853ee9abcab1"
    }
   }
  },
