--- a/notebooks/Wavelet_Tutorial/WV5 - Classification of the UCI-HAR dataset using Discrete Wavelet Transform..ipynb
+++ b/notebooks/Wavelet_Tutorial/WV5 - Classification of the UCI-HAR dataset using Discrete Wavelet Transform..ipynb
@@ -567,7 +567,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.8.2 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -581,7 +581,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.8.2"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+   }
   }
  },
  "nbformat": 4,
